[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-browser-service"
version = "0.1.6"
description = "Lightweight playwright wrapper for AI Agents"
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"

[tool.eidolon]
last-update-hash = "241f6ba7a83c73a4eae806301dfbb21bb0768876"

[tool.poetry.urls]
Github = "https://github.com/eidolon-ai/eidolon"
Website = "https://www.eidolonai.com/"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.10.3"

[tool.poetry.extras]
server = [ "fastapi", "playwright",]

[tool.poetry.dependencies.fastapi]
version = "^0.115.6"
extras = [ "standard",]
optional = true

[tool.poetry.dependencies.playwright]
version = "^1.49.0"
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
ruff = "^0.1.7"
