[tool.poetry]
name = "eidos-cli"
version = "0.1.2"
description = ""
authors = ["Luke Lalor <lukehlalor@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
eidos-client = "eidos_cli.main:main"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
httpx = "^0.25.2"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
prompt-toolkit = "^3.0.43"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 121
