[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon_examples"
version = "0.1.25"
description = ""
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"

[tool.ruff]
line-length = 121

[tool.eidolon]
update-tag = "examples"
last-update-hash = "d0801065ccaeef160b94adbcc71a9be9e83f0ff7"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
setuptools = "^69.0.2"
transformers = "^4.35.2"
eidolon-ai-sdk = "^0.1.52"
eidolon-ai-client = "^0.1.21"
pydub = "^0.25.1"
ruamel-yaml = "^0.18.6"
kubernetes = "^29.0.0"
jsonpath-ng = "^1.6.1"

[tool.poetry.scripts]
eidolon-server = "eidolon_ai_sdk.bin.agent_http_server:main"
replay = "eidolon_ai_sdk.bin.replay:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest-asyncio = "^0.23.4"

[tool.poetry.group.dev.dependencies.eidolon-ai-usage-client]
path = "../usage-service/usage-client"
develop = true

[tool.poetry.group.dev.dependencies.eidolon-ai-client]
path = "../client/python"
develop = true

[tool.poetry.group.dev.dependencies.eidolon-ai-sdk]
path = "../sdk"
develop = true
