[tool.poetry]
name = "eidolon-ai-sdk"
version = "0.1.12"
description = ""
authors = ["Luke Lalor <lukehlalor@gmail.com>"]
readme = "README.md"
include = ["logging.conf"]

[tool.poetry.scripts]
eidolon-server = "eidolon_ai_sdk.bin.agent_http_server:main"
#eidolon-create-agent = "eidolon_ai_sdk.bin.agent_creator:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.0"
pyyaml = "^6.0.1"
jsonschema = "^4.21.1"
httpx = "^0.26.0"
uvicorn = "^0.27.0"
numpy = "^1.26.3"
motor = "^3.3.2"
python-dotenv = "^1.0.1"
openai = "^1.9.0"
jinja2 = "^3.1.3"
pytest-json-report = "^1.5.0"
tiktoken = "^0.5.1"
jsonref = "^1.1.0"
chromadb = "^0.4.18"
spacy = "^3.7.2"
lxml = "^5.1.0"
filetype = "^1.2.0"
pypdf = "^4.0.1"
esprima = "^4.0.1"
unstructured = "^0.12.3"
python-multipart = "^0.0.6"
pillow = "^10.2.0"
watchdog = "^3.0.0"
python-docx = "^1.1.0"
python-jose = "^3.3.0"
authlib = "^1.3.0"
aiostream = "^0.5.2"
httpx-sse = "^0.4.0"
sse-starlette = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
ruff = "^0.1.7"
pytest-recording = "^0.13.1"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project"

[tool.ruff]
line-length = 121
