[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-ai-sdk"
version = "0.1.40"
description = "An Open Source Agent Services Framework"
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"
include = [ "logging.conf",]

[tool.ruff]
line-length = 121

[tool.eidolon]
update-tag = "sdk"
last-update-hash = "99dcca2eda833cd130794d1a15f6958670a3fe3f"

[tool.poetry.urls]
Github = "https://github.com/eidolon-ai/eidolon"
Website = "https://www.eidolonai.com/"

[tool.poetry.scripts]
eidolon-server = "eidolon_ai_sdk.bin.agent_http_server:main"
replay = "eidolon_ai_sdk.bin.replay:app"

[tool.poetry.dependencies]
setuptools = "^69.0.2"
python = ">=3.11,<3.12"
fastapi = "^0.109.0"
pyyaml = "^6.0.1"
jsonschema = "^4.21.1"
httpx = "^0.27.0"
uvicorn = "^0.27.0"
numpy = "^1.26.3"
motor = "^3.3.2"
python-dotenv = "^1.0.1"
openai = "^1.9.0"
anthropic = "^0.21.3"
jinja2 = "^3.1.3"
pytest-json-report = "^1.5.0"
tiktoken = "^0.5.1"
jsonref = "^1.1.0"
chromadb = "^0.4.18"
spacy = "^3.7.2"
lxml = "^5.1.0"
filetype = "^1.2.0"
pypdf = "^4.0.1"
esprima = "^4.0.1"
unstructured = "^0.12.3"
python-multipart = ">=0.0.6,<0.0.8"
pillow = "^10.2.0"
python-docx = "^1.1.0"
python-jose = "^3.3.0"
authlib = "^1.3.0"
httpx-sse = "^0.4.0"
sse-starlette = "^2.0.0"
dill = "^0.3.8"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-instrumentation-logging = "^0.44b0"
opentelemetry-sdk = "^1.23.0"
eidolon-ai-mistralai = "^0.1.6a"
eidolon-ai-client = "^0.1.10"
eidolon-ai-usage-client = "^0.1.6"
boto3 = "^1.34.74"
azure-identity = "^1.16.0"

[tool.pytest.ini_options]
pythonpath = "project"

[tool.poetry.dependencies.typer]
extras = [ "all",]
version = "^0.9.0"

[tool.poetry.dependencies.boto3-stubs]
extras = [ "essential",]
version = "^1.34.74"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
ruff = "^0.1.7"
pytest-recording = "^0.13.1"
pytest-asyncio = "^0.23.4"

[tool.poetry.group.dev.dependencies.eidolon-ai-client]
path = "../client/python"
develop = true

[tool.poetry.group.dev.dependencies.eidolon-ai-usage-client]
path = "../usage-service/usage-client"
develop = true
