[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-ai-sdk"
version = "0.1.162"
description = "An open source sgent service SDK"
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"
include = [ "logging.conf",]

[tool.ruff]
line-length = 121

[tool.eidolon]
update-tag = "sdk"
last-update-hash = "6fdad4d1f04a488f919822388fd573675f1e867b"

[tool.poetry.urls]
Github = "https://github.com/eidolon-ai/eidolon"
Website = "https://www.eidolonai.com/"

[tool.poetry.scripts]
eidolon-server = "eidolon_ai_sdk.bin.agent_http_server:main"
replay = "eidolon_ai_sdk.bin.replay:app"

[tool.poetry.dependencies]
setuptools = ">=69.0.2"
python = ">=3.10,<3.13"
fastapi = ">=0.109.0"
pyyaml = "^6.0.1"
jsonschema = "^4.21.1"
httpx = "^0.27.0"
uvicorn = ">=0.27.0"
numpy = "^1.26.3"
motor = "^3.3.2"
python-dotenv = "^1.0.1"
openai = "^1.41.1"
anthropic = ">=0.34.1"
jinja2 = "^3.1.3"
pytest-json-report = "^1.5.0"
tiktoken = ">=0.5.1"
jsonref = "^1.1.0"
filetype = "^1.2.0"
esprima = "^4.0.1"
python-multipart = ">=0.0.6,<0.0.8"
pillow = "^10.2.0"
python-docx = "^1.1.0"
python-jose = "^3.3.0"
authlib = "^1.3.0"
httpx-sse = "^0.4.0"
sse-starlette = "^2.0.0"
dill = "^0.3.8"
opentelemetry-instrumentation-fastapi = ">=0.44b0"
opentelemetry-instrumentation-logging = ">=0.44b0"
opentelemetry-sdk = ">=1.23.0"
eidolon-ai-mistralai = "^0.1.6a"
eidolon-ai-client = "^0.1.40"
eidolon-ai-usage-client = "^0.1.10"
boto3 = "^1.34.74"
azure-identity = "^1.16.0"
posthog = "^3.5.0"
ollama = "^0.2.0"
pymupdf = "^1.24.5"
jsonpath-ng = "^1.6.1"
azure-storage-blob = "^12.20.0"
aiohttp = "^3.9.5"
lxml = ">=4.9.3,<6.0.0"
aiosqlite = "^0.20.0"
eval-type-backport = "^0.2.0"
mem0ai = "^0.0.9"
pydantic = "^2.9.2"
chromadb-client = "^0.5.15"
bs4 = "^0.0.2"
aiofiles = "^24.1.0"

[tool.poetry.extras]
all = [ "playwright", "chromadb", "unstructured",]

[tool.pytest.ini_options]
pythonpath = "project"

[tool.poetry.dependencies.playwright]
version = "^1.43.0"
optional = true

[tool.poetry.dependencies.chromadb]
version = "^0.5.15"
optional = true

[tool.poetry.dependencies.unstructured]
version = "^0.14.5"
optional = true

[tool.poetry.dependencies.sqlalchemy]
version = "^2.0.31"
extras = [ "asyncio",]

[tool.poetry.dependencies.boto3-stubs]
version = "^1.34.74"
extras = [ "essential",]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
ruff = "^0.1.7"
pytest-recording = "^0.13.1"
pytest-asyncio = "^0.23.4"
pdoc = "^14.4.0"
vcrpy = "^6.0.1"
watchfiles = "^0.22.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies.typer]
extras = [ "all",]
version = "^0.9.0"

[tool.poetry.group.dev.dependencies.eidolon-ai-client]
path = "../client/python"
develop = true

[tool.poetry.group.dev.dependencies.eidolon-ai-usage-client]
path = "../usage-service/usage-client"
develop = true
