[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-ai-client"
version = "0.1.40"
description = "Eidolon python client and CLI"
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"

[tool.ruff]
line-length = 121

[tool.eidolon]
update-tag = "client"
last-update-hash = "6fdad4d1f04a488f919822388fd573675f1e867b"

[tool.poetry.scripts]
eidolon-cli = "eidolon_ai_client.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
setuptools = ">=69.0.2"
jsonref = "^1.1.0"
pydantic = ">=2.6.1"
httpx = ">=0.27.0"
httpx-sse = ">=0.4.0"
sse-starlette = ">=2.0.0"
aiostream = ">=0.5.2"

[tool.poetry.extras]
cli = [ "typer", "rich", "simple-term-menu",]

[tool.poetry.dependencies.typer]
version = "^0.12.3"
optional = true

[tool.poetry.dependencies.rich]
version = "^13.7.1"
optional = true

[tool.poetry.dependencies.simple-term-menu]
version = "^1.6.4"
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest-asyncio = "^0.23.4"
