[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-ai-usage-client"
version = "0.1.7"
description = ""
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"

[tool.eidolon]
last-update-hash = "f39f33b4eb8ebcbf4c1c68b4723eb0a93a66875c"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.6.4"
setuptools = "^69.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.2.0"
ruff = "^0.3.3"
