[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidolon-ai-usage-client"
version = "0.1.10"
description = ""
authors = [ "Luke Lalor <lukehlalor@gmail.com>",]
readme = "README.md"

[tool.eidolon]
last-update-hash = "8bd2c69b5b1757e62602e1af9b3b50b13fd475a9"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pydantic = "^2.6.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"
ruff = "^0.3.3"
